--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
 
                     <div className="z-20 mt-12 text-center">
-                        <h1 className="text-[#451a03] text-5xl font-black tracking-tighter mb-3">Sunflowery</h1>
+                        <h1 className="text-[#451a03] text-5xl font-black tracking-[0.25em] mb-3 ml-[0.25em]">Sunflowery</h1>
                         <button 
                             onClick={handleDateChange}
                             className="bg-white/40 hover:bg-white/60 backdrop-blur-xl px-5 py-1.5 rounded-full inline-flex items-center gap-2 border border-white/60 shadow-sm transition-all group"
